--- a/canaa/core/templates/home.html
+++ b/canaa/core/templates/home.html
@@ -28,7 +28,7 @@
             <div class="k-item_content k-item_num{{ forloop.counter }}">
                 <h4><a href="{{ p.get_absolute_url }}?search={{ p.name }}">{{ p.name }}</a></h4>
                 <div class="k-item_introtext">
-                    <p>{{ p.description|truncatewords_html:18 }}</p>
+                    <p>{{ p.description|slice:":70" }} ...</p>
                 </div>
                 <a class="btn btn-k-item_num{{ forloop.counter }} btn-small" href="{{ p.get_absolute_url }}?search={{ p.name }}">
                     <span>veja mais</span>
@@ -52,7 +52,7 @@
             <div class="k-item_content">
                     <h3>{{ b.title }}</h3>
                 <div class="k-item_introtext">
-                    <p>{{ b.body|slice:":80" }}</p>
+                    <p>{{ b.body|slice:":80" }} ...</p>
                 </div>
                 <a class="btn btn-red btn-small" href="{{ b.get_absolute_url }}">
                     <span>veja mais</span>
