--- a/canaa/catalog/templates/catalog/catalog_item.html
+++ b/canaa/catalog/templates/catalog/catalog_item.html
@@ -20,93 +20,94 @@
                 </div>
             </span>
         </div>
-        <!-- begin:produtos -->
-        {% for product in products %}
-        <div class="row-fluid products">
-            <div class="column-posts row-fluid">
-                <div class="span4">
-                    <div class="thumbnail">
-                        <div class="thumbnail-body">
-                            <div class="wrapper-image">
-                                <img src="{{ product.image.url }}" alt="{{ product.name }}">
+
+        <div class="row-fluid">
+            <!-- begin:produtos -->
+            {% for product in products %}
+            <div class="span12 products">
+                <div class="column-posts row-fluid">
+                    <div class="span4">
+                        <div class="thumbnail">
+                            <div class="thumbnail-body">
+                                <div class="wrapper-image">
+                                    <img src="{{ product.image.url }}" alt="{{ product.name }}">
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="span8 pull-right">
-                    <h4>{{ product.product_group }} - {{ product.name }}</h4>
-                    <p>{{ product.description }}</p><br>
-                    <table cellspacing="0" width="100%">
-                        <tbody>
-                            <tr>
-                                <th>Descrição</th>
-                                <th>Quantidade</th>
-                                <th>% Valor Diário</th>
-                            </tr>
-                            {% for info in infos %}
-                                {% if info.product_id == product.pk %}
-                                <tr class="{% if forloop.counter|divisibleby:2 %}even{% endif %}">
-                                    <td>{{ info.get_description_display }}</td>
-                                    <td align="center">{{ info.amount }}</td>
-                                    <td align="center">{{ info.value }}</td>
-                                </tr>
-                                {% elif forloop.first %}
+                    <div class="span8 pull-right">
+                        <h4>{{ product.product_group }} - {{ product.name }}</h4>
+                        <p>{{ product.description }}</p><br>
+                        <table cellspacing="0" width="100%">
+                            <tbody>
                                 <tr>
-                                    <td colspan="3" align="center">
-                                        Nenhuma informação encontrada.
+                                    <th>Descrição</th>
+                                    <th>Quantidade</th>
+                                    <th>% Valor Diário</th>
+                                </tr>
+                                {% for info in infos %}
+                                    {% if info.product_id == product.pk %}
+                                    <tr class="{% if forloop.counter|divisibleby:2 %}even{% endif %}">
+                                        <td>{{ info.get_description_display }}</td>
+                                        <td align="center">{{ info.amount }}</td>
+                                        <td align="center">{{ info.value }}</td>
+                                    </tr>
+                                    {% elif forloop.first %}
+                                    <tr>
+                                        <td colspan="3" align="center">
+                                            Nenhuma informação encontrada.
+                                        </td>
+                                    </tr>
+                                    {% endif %}
+                                {% empty %}
+                                    <tr>
+                                        <td colspan="3" align="center">
+                                            Nenhuma informação encontrada.
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                <tr>
+                                    <td colspan="3" >
+                                        <small>*Valores diários de referência com base em uma
+                                        dieta de 2.000kcal ou 8.400kj para adultos.
+                                        Seus valores diários podem ser maiores dependendo
+                                        de suas necessidades energéticas. **Valores
+                                        não especificados.</small>
                                     </td>
                                 </tr>
-                                {% endif %}
-                            {% empty %}
-                                <tr>
-                                    <td colspan="3" align="center">
-                                        Nenhuma informação encontrada.
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            <tr>
-                                <td colspan="3" >
-                                    <small>*Valores diários de referência com base em uma
-                                    dieta de 2.000kcal ou 8.400kj para adultos.
-                                    Seus valores diários podem ser maiores dependendo
-                                    de suas necessidades energéticas. **Valores
-                                    não especificados.</small>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
+                <!-- break -->
             </div>
-            <!-- break -->
             {% empty %}
             <p>Nenhum produto encontrado.</p>
             {% endfor %}
             <!-- end:produtos -->
+        </div>
 
-            <!--begin:pagination-->
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class="pagination pagination-centered">
-                        <ul>
-                            {% if products.has_previous %}
-                                <li><a href="?page={{ products.previous_page_number }}">&laquo;</a></li>
-                            {% endif %}
+        <!--begin:pagination-->
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="pagination pagination-centered">
+                    <ul>
+                        {% if products.has_previous %}
+                            <li><a href="?page={{ products.previous_page_number }}">&laquo;</a></li>
+                        {% endif %}
 
-                            <li><a href="{{ products.number.url }}">Página {{ products.number }} de {{ products.paginator.num_pages }}</a></li>
+                        <li><a href="{{ products.number.url }}">Página {{ products.number }} de {{ products.paginator.num_pages }}</a></li>
 
-                            {% if products.has_next %}
-                                <li><a href="?page={{ products.next_page_number }}">&raquo;</a></li>
-                            {% endif %}
-                        </ul>
-                    </div>
+                        {% if products.has_next %}
+                            <li><a href="?page={{ products.next_page_number }}">&raquo;</a></li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
-            <!--end:pagination-->
-
         </div>
-        <!-- end:elements -->
+        <!--end:pagination-->
 
     </div>
-    </div>
+
 
 {% endblock content %}
