--- a/canaa/core/templates/contact.html
+++ b/canaa/core/templates/contact.html
@@ -49,7 +49,8 @@
                 <!-- Form -->
                 {% if contact_success %}
                     <p>Mensagem enviada com sucesso.</p>
-                    <a href="{% url 'contact' %}" class="btn btn-red">Voltar</a>
+                    <a href="{% url 'contact' %}" class="btn btn-blue">Voltar</a>
+                    <br><br>
                 {% else %}
                     <form method="post" action="." role="form">
                         {% for field in contact_form %}
