--- a/canaa/catalog/templates/catalog/catalog_group.html
+++ b/canaa/catalog/templates/catalog/catalog_group.html
@@ -37,7 +37,7 @@
                                 </a>
                             </div>
                             <div class="thumbnail-title">
-                                <h2><a href="/produtos/itens/">{{ group.name }}</a></h2>
+                                <h2><a href="{{ group.get_absolute_url }}">{{ group.name }}</a></h2>
                                 <p>{{ group.description }}</p>
                             </div>
                         </div>
